cluster/networking/pi-hole/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-http
  namespace: networking
spec:
  hostnames:
    - pihole.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pihole-web
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
